Updated TabNet.yml with appropriate installation location

--- a/TabNet.yml
+++ b/TabNet.yml
@@ -3,6 +3,7 @@ channels:
   - pytorch
   - nvidia
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -233,4 +234,4 @@ dependencies:
     - threadpoolctl==3.2.0
     - tqdm==4.66.1
     - wget==3.2
-prefix: /home/harish/.conda/envs/TabNet
+prefix: ~/.conda/envs/TabNet
