--- a/TabNet.yml
+++ b/TabNet.yml
@@ -231,7 +231,7 @@ dependencies:
   - rfc3339-validator=0.1.4=py38h06a4308_0
   - rfc3986-validator=0.1.1=py38h06a4308_0
   - rpds-py=0.10.6=py38hb02cf49_0
-  - seaborn=0.12.2=py38h06a4308_0
+  - seaborn=0.13.2=*_0
   - seaborn-base=0.13.2=pyhd8ed1ab_0
   - send2trash=1.8.2=py38h06a4308_0
   - setuptools=68.2.2=py38h06a4308_0
