--- a/TabNet.yml
+++ b/TabNet.yml
@@ -282,4 +282,4 @@ dependencies:
     - threadpoolctl==3.2.0
     - tqdm==4.66.1
     - wget==3.2
-prefix: /home/harish/.conda/envs/TabNet
+prefix: ~/.conda/envs/TabNet
