Remove unnecessary files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ Coefficient_featImp_models_8th_set.csv
 *.pdf
 TabNet.ipynb
 *__pycache__
+Cover letter.docx
+Progress.pptx
+Harish_Baki_CI2024_Presentation.pptx
+README.txt
+Response_to_reviewer_comments.docx
+Tabnet_training_flowchart.pptx
